# kira

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
assets/: icon-dock.icns
installer/: config.yaml.template  kira.iss  license.de.txt  requirements-bundle.txt
kira/: __init__.py  app.py  cli.py  config.py  config_writer.py  context.py  context_win.py  hotkey.py  hotkey_win.py  injector.py  injector_win.py  main.py  permissions.py  permissions_win.py  recorder.py  styler.py  transcriber.py  transcriber_fw.py  updater.py  welcome.py  welcome_win.py
kira/ui/: __init__.py  _dialog_style.py  about_dialog.py  hud_qt.py  menubar.py  popup.py  qt_marshal.py  settings_dialog.py  setup_hint_dialog.py  splash.py  tray_win.py  welcome_dialog.py
prompts/: chat.md  code.md  email.md  plain.md  terminal.md
scripts/: build_app.sh  build_installer.ps1  embed_icon.ps1  fetch_whisper_local.ps1  install_autostart.ps1  install_win.ps1  install_wsl_ollama.sh  regenerate_branded_icon.py
tests/: test_config.py  test_config_writer.py  test_context.py  test_context_win.py  test_hotkey.py  test_hotkey_win.py  test_init_constants.py  test_injector.py  test_injector_win.py  test_menubar.py  test_permissions.py  test_permissions_win.py  test_popup.py  test_recorder.py  test_state_machine.py  test_styler.py  test_transcriber.py  test_transcriber_fw.py  test_tray_icon.py  test_tray_update_handler.py  test_updater.py  test_welcome_dialog.py  test_welcome_win.py
tests/fixtures/samples/: make_fixture.py
