[project]
name = "kira"
version = "0.1.0"
description = "Voice-to-text menubar app for macOS with local Whisper + Ollama polish"
requires-python = ">=3.12"
dependencies = [
  "mlx-whisper>=0.4.0",
  "sounddevice>=0.5.0",
  "numpy>=2.0",
  "pynput>=1.7",
  "rumps>=0.4",
  "pyobjc-framework-Cocoa>=11.0",
  "pyobjc-framework-Quartz>=11.0",
  "pyobjc-framework-ApplicationServices>=11.0",
  "ollama>=0.4",
  "pyperclip>=1.9",
  "pydantic>=2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "py2app>=0.28",
  "soundfile>=0.12",
]

[tool.pytest.ini_options]
markers = [
  "integration: slow integration test, needs model download",
]

[project.scripts]
kira-once = "kira.cli:main"
kira = "kira.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kira"]
